Adding Some Changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="skill-row">
                 <img class="chillies" src="C:\Users\Zaavia\Desktop\Personal_Site\Picture\chillies.png" alt="chillies-img">
-                <h3>Lorem Ipsum Dolor</h3>
+                <h3>chillies</h3>
                 <p >Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis
                     mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
             </div>
